ASSERT NOT REACHED in WebCore::Layout::LineBuilder::candidateContentForLine https://bugs.webkit.org/show_bug.cgi?id=221492 <rdar://problem/74032439>

Reviewed by Antti Koivisto.

Floats are not part of the inline content and they should be ignored while checking if the continuous candidate content ends in a wrap opportunity.

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::candidateContentForLine):


Canonical link: https://commits.webkit.org/233775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272461 268f45cc-cd09-0410-ab3c-d52691b4dbfc